--- a/trachisan/index-ru.html
+++ b/trachisan/index-ru.html
@@ -18,30 +18,30 @@
   </head>
   <body>
   <div class="navigation-logo">
-    <a  href="index.html" class="logo">Трахісан <sup>®</sup></a>
+    <a  href="index.html" class="logo">ТРАХИСАН <sup>®</sup></a>
     <div class="navigation-top" role="navigation">
       <div id="menuToggle">
         <input type="checkbox" /> <span></span> <span></span> <span></span>
         <ul id="menu">
-          <li><a class="translated-text navmenu" key="g1" href="#t1">Як діє</a></li>
-          <li><a class="translated-text navmenu" key="g2" href="#t2">Як приймати</a></li>
-          <li><a class="translated-text navmenu" key="g3" href="#t3">ПОРАДИ</a></li>
-          <li><a class="translated-text navmenu" key="g5" href="#map">Де придбати</a></li>
-<!--          <li><a class="translateBtn active" language="ua" href="./index.html">ua</a></li>-->
-          <li><a class="translateBtn" language="ru" href="./index-ru.html">ru</a></li>
+          <li><a class="translated-text navmenu" key="g1" href="#t1">КАК ДЕЙСТВУЕТ</a></li>
+          <li><a class="translated-text navmenu" key="g2" href="#t2">КАК ПРИНИМАТЬ</a></li>
+          <li><a class="translated-text navmenu" key="g3" href="#t3">СОВЕТЫ</a></li>
+          <li><a class="translated-text navmenu" key="g5" href="#map">ГДЕ КУПИТЬ</a></li>
+          <li><a class="translateBtn" language="ua" href="./index.html">ua</a></li>
+          <!-- <li><a class="translateBtn" language="ru" href="./index_ru.html">ru</a></li> -->
         </ul>
       </div>
     </div>
     <div class="desctop-navigation">
-      <a class="translated-text navmenu" key="g1" href="#t1">Як діє</a>
-      <a class="translated-text navmenu" key="g2" href="#t2">Як приймати</a>
-      <a class="translated-text navmenu" key="g3" href="#t3">ПОРАДИ</a>
-      <a class="translated-text navmenu" key="g5" href="#map">Де придбати</a>
-<!--      <a class="translateBtn language active" language="ua" href="./index.html">ua</a>-->
-      <a class="translateBtn language" language="ru" href="./index-ru.html">ru</a>
+      <a class="translated-text navmenu" key="g1" href="#t1">КАК ДЕЙСТВУЕТ</a>
+      <a class="translated-text navmenu" key="g2" href="#t2">КАК ПРИНИМАТЬ</a>
+      <a class="translated-text navmenu" key="g3" href="#t3">СОВЕТЫ</a>
+      <a class="translated-text navmenu" key="g5" href="#map">ГДЕ КУПИТЬ</a>
+      <a class="translateBtn language" language="ua" href="./index.html">ua</a>
+      <!-- <a class="translateBtn language" language="ru" href="./index_ru.html">ru</a> -->
     </div>
     <a class="instruction" href="./instruction.pdf"
-    ><p class="translated-text" key="instruction">Iнструкцiя</p></a
+    ><p class="translated-text" key="instruction">Инструкция</p></a
     >
   </div>
 
@@ -66,9 +66,9 @@
 <div class="block-two">
   <div class="block-two__product"></div>
   <div class="block-two__text">
-    <p><b>ТРАХІСАН <sup>®</sup> -</b><br>
-    ОПТИМАЛЬНА КОМБІНАЦІЯ<br>
-    ПРИ ІНФЕКЦІЇ ТА БОЛЮ В ГОРЛІ
+    <p><b>ТРАХИСАН <sup>®</sup> -</b><br>
+    ОПТИМАЛЬНАЯ КОМБИНАЦИЯ<br>
+    ПРИ ИНФЕКЦИИ И БОЛИ В ГОРЛЕ
     </p>
   </div>
 </div>
@@ -76,39 +76,35 @@
   <div class="block-three__img"></div>
   <div class="block-three__text">
     <p>
-    <b>ТРАХІСАН <sup>®</sup> -</b><br>
-    АНТИСЕПТИК + АНТИБІОТИК + АНЕСТЕТИК
+    <b>ТРАХИСАН <sup>®</sup> -</b><br>
+    АНТИСЕПТИК + АНТИБИОТИК + АНЕСТЕТИК
     </p>
     <ul>
-      <li>Зменшує біль у горлі</li>
-      <li>Знищує мікроби</li>
-      <li>Усуває запалення</li>
-      <li>Запобігає виникненню<br>післяопераційниx
-        ускладнень</li>
-      <li>Забезпечує свіжість дихання</li>
+      <li>Уменьшает боль в горле</li>
+      <li>Уничтожает микробы</li>
+      <li>Устраняет воспаление</li>
+      <li>Предотвращает послеоперационные<br>
+        осложнения</li>
+      <li>Обеспечивает свежесть дыхания</li>
     </ul>
   </div>
 </div>
   <a name="t2"></a>
 
   <div class="block-four">
-  <h3>Як приймати</h3>
+  <h3>КАК ПРИНИМАТЬ</h3>
   <div class="block-four__container">
     <div class="block-four__container-baby">
       <div></div>
-      <p><b>Діти 4-12 років:</b><br>
-        Приймати по 1 таблетці, розсмоктуючи у
-        ротовій порожнині, кожні 2 години.
-        Добова доза – 6 таблеток.
+      <p><b>Дети 4-12 лет:</b><br>
+        Принимать по 1 таблетке, рассасывая в ротовой полости, каждые 2 часа. Суточная доза - 6 таблеток.
       </p>
     </div>
 
     <div class="block-four__container-adult">
       <div></div>
-      <p><b>Діти від 12 та дорослі:</b><br>
-        Приймати по 1 таблетці, розсмоктуючи у
-        ротовій порожнині, кожні 2 години.
-        Добова доза – 8 таблеток.
+      <p><b>Дети старше 12 лет и взрослые:</b><br>
+        Принимать по 1 таблетке, рассасывая в ротовой полости, каждые 2 часа. Суточная доза - 8 таблеток.
       </p>
     </div>
   </div>
@@ -116,14 +112,14 @@
 
   </div>
 <div class="block-five">
-  <h3>Корисні поради при болю в горлі</h3>
+  <h3>ПОЛЕЗНЫЕ СОВЕТЫ ПРИ БОЛИ В ГОРЛЕ</h3>
   <div>
-    <p>Таблетки для смоктання забезпечують найбільшу концентрацію ліків протягом тривалого часу, що збільшує ефект від лікування.</p>
-    <p>Лікувальні таблетки слід повністю розсмоктати, але не треба жувати.</p>
-    <p>Після розсмоктування таблеток бажано не їсти і не пити протягом 1-2 годин.</p>
-    <p>На відміну від льодяників, таблетки не травмують слизову оболонку рота і не викликають карієсу, оскільки не містять цукру.</p>
-    <p>Під час лікування корисно пити багато теплого чаю, води, молока, але не варто вживати дуже гарячі або газовані напої і соки.</p>
-    <p>Краще надавати перевагу напіврідкій теплій їжі і  уникати гострих, твердих та сухих продуктів.</p>
+    <p>Таблетки для рассасывания обеспечивают наибольшую концентрацию лекарства в течение длительного времени, увеличивает эффект от лечения.</p>
+    <p>Таблетки следует полностью рассасывать, не следует жевать.</p>
+    <p>После рассасывания таблеток желательно не есть и не пить в течение 1-2 часов.</p>
+    <p>В отличие от леденцов, таблетки не травмируют слизистую оболочку рта и не вызывают кариеса, поскольку не содержат сахара.</p>
+    <p>Во время лечения полезно пить много теплого чая, воды, молока. Не стоит употреблять очень горячие или газированные напитки и соки.</p>
+    <p>Лучше отдавать предпочтение полужидкой теплой пище и избегать острых, твердых и сухих продуктов.</p>
   </div>
 </div>
 
@@ -137,7 +133,7 @@
 
 
   <map>
-    <h3 class="translated-text" key="buy-text">ДЕ придбати</h3>
+    <h3 class="translated-text" key="buy-text">ГДЕ КУПИТЬ</h3>
     <div id="comp_wgt" data-drug="41650" data-lang="ua" data-url="https://compendium.com.ua/dec/271106/" data-proj="трахісан" style="border-color: rgb(0, 0, 160); width: 90%;"><div class="title" style="background: rgb(0, 0, 160);"><a href="https://compendium.com.ua/dec/271106/" title="ТРАХІСАН, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ua.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Мапа</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Кошик</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
   </map>
 
