--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -17,12 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-  <div class="alert-license">
+  <!-- <div class="alert-license">
   <a href="license.html">
     Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
   </a>
   <button class="license-off"><p>Slažem se</p></button>
-</div>
+</div> -->
 	<header class="App-header">
 
 
