--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -459,7 +459,6 @@
 117513, г. Москва, ул. Островитянова, д.6
 Тел./факс: +7 (495) 609-65-72
 www.alpenpharma.com info.russia@alpenpharma.com
-ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ
 
 
             </p>
@@ -469,7 +468,7 @@ www.alpenpharma.com info.russia@alpenpharma.com
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ВРЕДНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
+            <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ.<br>ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ ИЛИ ПРОКОНСУЛЬТИРУЙТЕСЬ У СПЕЦИАЛИСТА</p>
           </div>
 
 
