--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -64,10 +64,10 @@
             <p>Сделано в Германии</p>
           </a>
           <a class="block-2__plate">
-            <p>Взрослым и детям</p>
+            <p>Для взрослых и детей с 1 года</p>
           </a>
           <a class="block-2__plate">
-            <p>Натуральный состав</p>
+            <p>Комплексный состав</p>
           </a>
           <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=Influcid" class="block-2__plate">
             <p>Доказанная эффективность</p>
@@ -187,15 +187,48 @@
             </div>
           </div>
 
+<!--          //////new-->
+
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 12 лет и  взрослым:</b> рассасывать до полного растворения каждый час (не больше 12 таблеток в сутки) до наступления улучшения
+              <b>Детям от 6 до 12 лет:</b> по 1 таблетке 4 раза в сутки.
+            </p>
+            <div class="subcontainer">
+              <div class="subcontainer-particle-1">
+                <b>В 1-2  СУТКИ</b>
+                <b class="subtext">Каждые 2 часа</b>
+                <p>по 1 таблетке 4 раза в сутки </p>
+              </div>
+              <div class="subcontainer-particle-2">
+                <div class="clock-img"></div>
+                <div class="pill-container pill8"></div>
+              </div>
+              <div class="subcontainer-particle-1">
+                <b>
+                  ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
+                </b>
+                <b class="subtext">До выздоровления</b>
+                <p>по 1  таблетке 3 раза в сутки</p>
+              </div>
+              <div class="subcontainer-particle-2">
+                <div class="clock-img"></div>
+                <div class="pill-container pill3"></div>
+              </div>
+            </div>
+          </div>
+
+
+<!--          ///// new-->
+
+          <div class="container__subcontainer">
+            <p>
+              <b>Детям от 12 лет и  взрослым:</b> по 1 таблетке 6 раз в сутки.
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>В ПЕРВЫЕ СУТКИ</b>
                 <b class="subtext">Каждый час</b>
-                <p>по 1 таблетке</p>
+                <p>по 1 таблетке 6 раз в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -206,7 +239,7 @@
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До выздоровления</b>
-                <p>1-2 таблетки 3 раза в сутки</p>
+                <p>по 1 таблетке 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -215,44 +248,8 @@
             </div>
           </div>
         </div>
-        <p class="block-5__container-btext">
-          Длительность лечения  7-10 дней до полного выздоровления
-        </p>
-        <h3>Для профилактики ОРВИ</h3>
 
-        <div class="block-5__container">
-          <div class="container__subcontainer">
-            <p>
-              <b>Детям от 1 до 12 лет:</b>  рассасывать по 1 таблетке 3 раза в сутки
-            </p>
-            <div class="subcontainer vertical">
-              <div class="subcontainer-particle-1">
-                <b>В СУТКИ</b>
-                <p>не больше 3 таблеток</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container pill3"></div>
-              </div>
-            </div>
-          </div>
 
-          <div class="container__subcontainer">
-            <p>
-              <b>Детям от 12 лет и взрослым:</b> рассасывать по 1-2 таблетке 3 рази в сутки
-            </p>
-            <div class="subcontainer vertical">
-              <div class="subcontainer-particle-1">
-                <b>В СУТКИ</b>
-                <p>не больше 6 таблеток</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container pill6"></div>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="bottom-text">
           <p>
             Применение препарата при первых проявлениях симптомов ОРВИ и гриппа или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания;
@@ -431,7 +428,7 @@
 
             <div class="block-7">
               <h2>Где купить</h2>
-              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf;"><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+              <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=">Где купить</a>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
@@ -448,9 +445,18 @@
             <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
             <!--            </ol>-->
             <p>
-              Реклама лекарственного препарата. Перед применением внимательно ознакомьтесь с инструкцией и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Инфлюцид таб. Р.С. № ___________________.
+              Предприятие-производитель:
+              Немецкий Гомеопатический Союз
+              (Deutsche Homoopathie-Union-DHU)
+              Германия, Ottostrasse 24, 76227 Karlsruhe, Germany
               <br>
-              Эксклюзивный дистрибьютор: ____________________________.
+              Официальный представитель в РБ:
+              АО «Alpen Pharma AG» (Швейцарская Конфедерация).
+              Представительство в РБ: 220053, г.Минск, ул. Пархоменко,3, офис 1Б.
+              www.alpenpharma.com
+              info.belarus@alpenpharma.com<br>
+              Номер регистрационного свидетельства
+              МЗ РБ Таблетки №3167/98/03/08/13/18/18 от 06.11.2018 бессрочно
             </p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
@@ -458,7 +464,8 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
+            <p>НА ПРАВАХ РЕКЛАМЫ. ГОМЕОПАТИЧЕСКОЕ ЛЕКАРСТВЕННОЕ СРЕДСТВО. ТРАДИЦИОННО ПРИМЕНЯЕТСЯ В КОМПЛЕКСНОМ ЛЕЧЕНИИ ГРИППА И ОСТРЫХ РЕСПИРАТОРНЫХ ЗАБОЛЕВАНИЙ.
+              ПЕРЕД ПРИМЕНЕНИЕМ ПРОЧТИТЕ ИНСТРУКЦИЮ ИЛИ ПРОКОНСУЛЬТИРУЙТЕСЬ С ВРАЧОМ.</p>
           </div>
 
 
