--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -17,12 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-<div class="alert-license">
+<!-- <div class="alert-license">
   <a href="license.html">
     Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
   </a>
   <button class="license-off"><p>Slažem se</p></button>
-</div>
+</div> -->
 
 	<header class="App-header">
 
@@ -353,6 +353,42 @@
 
         <div class="block-6">
             <h2>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
+            <!-- //////new -->
+<div class="block-6__container">
+              <div class="block-6__container-img"><p>ВРЕМЯ ВЫБИРАТЬ ЗДОРОВЬЕ</p></div>
+              <div class="block-6__container-text"><p>Генеральный директор Всемирной организации здравоохранения на брифинге для СМИ по поводу коронавируса COVID-19 от 11 марта 2020, заявил, что COVID-19 можно характеризовать как пандемию.<br>Это не повод паниковать и бояться. В этот период следует придерживаться рекомендаций ВООЗ, МОЗ Украины и врачей. А также трезвая мыслить и оценивать ситуацию.
+Сейчас есть очень много информации о коронавирусе, пути его передачи, что нужно делать, чтобы не заразиться и как себя вести в условиях карантина. Ориентируйтесь на официальные рекомендации.</p>
+                <p>Как защитить себя от вирусных инфекций?<sup>2</sup></p>
+              </div>
+              <button class="accordion">Детальнiше</button>
+              <div class="panel">
+                <p>Укрепляйте иммунитет и следите за самочувствием
+Полноценное питание, здоровый сон, физические упражнения и водный баланс организма</p>
+                <p>Избегайте контакта с людьми с симптомами ОРВИ
+С теми, кто имеет симптомы простуды. Минимальная дистанция- 1,5 м</p>
+                <p>Вовремя обращайтесь к врачу
+В случае появления первых симптомов ОРВИ немедленно обратитесь к своему семейному врачу</p>
+                <p>Термически обрабатывайте продукты
+Не употребляйте сырое мясо, мясные субпродукты и яйца</p>
+                <p>Мойте часто руки с мылом в течение 20-ти секунд
+Или пользуйтесь антисептиком, содержание спирта в котором должен быть не менее 60 - 80%</p>
+                <p>Избегайте прикосновений к своему лицу
+Не прикасайтесь грязными руками глаз, носа и рта</p>
+                <p>Осложненное течение болезни от коронавирусной инфекции на сегодня имеют люди старшего поколения, тяжелобольные, люди с сопутствующими заболеваниями (сердечно - сосудистые заболевания, онкология, диабет) и те, у кого снижен иммунитет.</p>
+                <p>Сейчас внимание населения отдано и сконцентрировано вокруг распространения коронавируса COVID-19, но не следует забыть, что повысилась заболеваемость гриппом и ОРВИ.</p>
+                <p>На 10-й неделе ОРВИ заболели 220 932 человека, из них 66,4% - дети в возрасте до 17 лет. Интенсивный показатель заболеваемости составляет 577,8 на 100 000 населения, что на 21,2% больше эпидемического порога по Украине <sup>3</sup>.  </p>
+                <p>Препарат ИНФЛЮЦИД содержит шесть активных компонентов, наиболее приемлемых для лечения острой респираторной вирусной инфекции. ИНФЛЮЦИД останавливает типичные признаки острой инфекции дыхательных путей, такие как лихорадка, головная боль, болезненность мышц, а также ринит и фарингит. <sup>1</sup>. </p>
+                <p>ИНФЛЮЦИД усиливает естественную защиту организма и способствует быстрому выздоровлению и восстановлению сил после перенесенного заболевания, таким образом уменьшает признаки истощения (астенический синдром) или предотвращает их. Применение препарата при первых проявлениях заболевания или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания<sup>1</sup>.</p>
+                <p>Берегите себя и своих близких. Желаем крепкого здоровья и крепкого иммунитета.</p>
+                <ul>
+                  <li>Инструкция для медицинского использования к препарату Инфлюцид</li>
+                  <li>http://covid19.com.ua/#rec166168889 </li>
+                  <li>https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini </li>
+                </ul>
+                  
+              </div>
+            </div>
+<!-- /////////////new -->
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грипп сезона 2020</p></div>
               <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовиться. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
