--- a/influcid/index.html
+++ b/influcid/index.html
@@ -17,12 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <div class="alert-license">
+    <!-- <div class="alert-license">
       <a href="license.html">
         Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
       </a>
       <button class="license-off"><p>Slažem se</p></button>
-    </div>
+    </div> -->
 	<header class="App-header">
 
 
@@ -349,6 +349,52 @@
 
         <div class="block-6">
             <h2>КОРИСНА ІНФОРМАЦІЯ</h2>
+
+<!-- //////new -->
+<div class="block-6__container">
+              <div class="block-6__container-img"><p>ЧАС ОБИРАТИ ЗДОРОВ'Я</p></div>
+              <div class="block-6__container-text"><p>Генеральний директор Всесвітньої організації охорони здоров’я на брифінгу для ЗМІ щодо коронавірусу COVID-19 від 11 березня 2020 р., заявив, що COVID-19 можна характеризувати як пандемію.<br>Це не привід панікувати та боятися. В цей період слід дотримуватися рекомендацій ВООЗ, МОЗ України та лікарів. А також тверезо мислити та оцінювати ситуацію.
+Наразі є дуже багато інформації про коронавірус, шляхи його передачі, що потрібно робити, щоб не заразитися та як себе вести в умовах карантину. Орієнтуйтесь на офіційні рекомендації.</p>
+                <p>Як себе захистити від вірусних інфекцій<sup>2</sup></p>
+              </div>
+              <button class="accordion">Детальнiше</button>
+              <div class="panel">
+
+                <p>Зміцнюйте імунітет та слідкуйте за самопочуттям
+Повноцінне харчування, здоровий сон, фізичні вправи та водний баланс організму</p>
+
+<p>Уникайте контакту з людьми із симптомами ГРВІ
+З тими, хто має симптоми застуди. Мінімальна дистанція- 1,5 м</p>
+
+<p>Вчасно звертайтеся до лікаря
+У разі появи перших симптомів ГРВІ невідкладно зверніться до свого сімейного лікаря</p>
+
+<p>Термічно обробляйте продукти
+Не їжте сире м’ясо, м’ясні субпродукти та яйця</p>
+
+<p>Мийте часто руки з милом упродовж 20- ти секунд
+Або користуйтесь антисептиком, вміст спирту в якому не повинен бути менше 60 - 80%</p>
+
+<p>Уникайте дотиків до свого обличчя
+Не торкайтеся брудними руками очей, носа та рота</p>
+
+
+                <p>Ускладнений перебіг хвороби на сьогодні мають люди похилого віку, тяжкохворі, люди з супутніми захворюваннями (серцево – судинні захворювання, онкологія, діабет) та ті, у кого знижений імунітет.</p>
+                <p>Наразі увага населення віддана та сконцентрована навколо розповсюдження коронавірусу COVID-19, але не слід забути, що підвищилась захворюваність на грип та ГРВІ. </p>
+                <p>На 10 тижні на ГРВІ захворіли 220 932 особи, із них 66,4% - діти віком до 17 років. Інтенсивний показник захворюваності становить 577,8 на 100 000 населення, що на 21,2% більше епідемічного порога по Україні <sup>3</sup>.  </p>
+                <p>Препарат ІНФЛЮЦИД містить шість активних компонентів, найбільш прийнятних для лікування гострої респіраторної вірусної інфекції. ІНФЛЮЦИД зупиняє типові ознаки гострої інфекції дихальних шляхів, такі як гарячка, головний біль, болючість м’язів, а також риніт та фарингіт <sup>1</sup>. </p>
+                <p>ІНФЛЮЦИД посилює природний захист організму і сприяє швидкому видужанню і відновленню сил після перенесеного захворювання, у такий спосіб зменшує ознаки виснаження (астенічний синдром) або запобігає їм. Застосування препарату при перших проявах захворювання або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання<sup>1</sup>.</p>
+                <p>Бережіть себе та своїх близьких. Бажаємо міцного здоров’я та стійкого імунітету.</p>
+                <ul>
+                	<li>Інструкція для медичного застосування до препарату Інфлюцид</li>
+                	<li>http://covid19.com.ua/#rec166168889 </li>
+                	<li>https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini </li>
+                </ul>
+                  
+              </div>
+            </div>
+<!-- /////////////new -->
+
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грип сезону 2020</p></div>
               <div class="block-6__container-text"><p>Епідеміологічний сезон розпочався, і вже настав час до нього готуватися. Зверніть увагу, що різниця між грипом та ГРВІ (гострою респіраторною вірусною інфекцією) полягає у тому, що збудниками грипу є різні штами вірусу грипу (варіанти одного виду вірусу, що відрізняються за рядом властивостей), а збудниками ГРВІ є понад 200 різноманітних вірусів, які часто не пов'язані генетично та належать до різних груп захворювань.</p>
