--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -384,7 +384,7 @@
 
           <div>
             <h3>Термически обрабатывайте продукты</h3>
-            <p>Не їжте сире м’ясо, м’ясні субпродукти та яйця</p>
+            <p>Не употребляйте сырое мясо, мясные субпродукты и яйца</p>
           </div>
 
           <div>
