--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -63,7 +63,7 @@
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
-          <b>Простуда?</b> Выбор за тобой. <b>Инфлюцид</b>
+          <b>Вирус?</b> Выбор за тобой. <b>Инфлюцид</b>
         </p>
 
         <div class="header-block-2">
@@ -359,7 +359,7 @@
               <div class="block-6__container-text"><p>Генеральный директор Всемирной организации здравоохранения на брифинге для СМИ по поводу коронавируса COVID-19 от 11 марта 2020, заявил, что COVID-19 можно характеризовать как пандемию.<br>Это не повод паниковать и бояться. В этот период следует придерживаться рекомендаций ВООЗ, МОЗ Украины и врачей. А также трезвая мыслить и оценивать ситуацию.
 Сейчас есть очень много информации о коронавирусе, пути его передачи, что нужно делать, чтобы не заразиться и как себя вести в условиях карантина. Ориентируйтесь на официальные рекомендации.</p>
               </div>
-              <button class="accordion">Детальнiше</button>
+              <button class="accordion">Подробнее</button>
               <div class="panel">
 
 
@@ -406,11 +406,9 @@
                 <p>Препарат ИНФЛЮЦИД содержит шесть активных компонентов, наиболее приемлемых для лечения острой респираторной вирусной инфекции. ИНФЛЮЦИД останавливает типичные признаки острой инфекции дыхательных путей, такие как лихорадка, головная боль, болезненность мышц, а также ринит и фарингит. <sup>1</sup>. </p>
                 <p>ИНФЛЮЦИД усиливает естественную защиту организма и способствует быстрому выздоровлению и восстановлению сил после перенесенного заболевания, таким образом уменьшает признаки истощения (астенический синдром) или предотвращает их. Применение препарата при первых проявлениях заболевания или сразу после контакта с людьми, которые заболели, способствует предотвращению развития заболевания<sup>1</sup>.</p>
                 <p>Берегите себя и своих близких. Желаем крепкого здоровья и крепкого иммунитета.</p>
-                <ul>
-                  <li><a href='./instruction.pdf' >Инструкция для медицинского использования к препарату Инфлюцид</a></li>
-                  <li><a href='http://covid19.com.ua/#rec166168889' >http://covid19.com.ua/#rec166168889</a></li>
-                  <li><a href='https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini' >https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini</a></li>
-                </ul>
+                  <p><sup>1</sup><a href='./instruction.pdf' >Инструкция для медицинского использования к препарату Инфлюцид</a></p>
+                  <p><sup>2</sup><a href='http://covid19.com.ua/#rec166168889' >http://covid19.com.ua/#rec166168889</a></p>
+                  <p><sup>3</sup><a href='https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini' >https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini</a></p>
                   
               </div>
             </div>
