--- a/influcid/index.html
+++ b/influcid/index.html
@@ -62,7 +62,7 @@
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
-          <b>Застуда?</b> Вибiр за тобою. <b>Iнфлюцид</b>
+          <b>Вiрус?</b> Вибiр за тобою. <b>Iнфлюцид</b>
         </p>
 
         <div class="header-block-2">
@@ -403,11 +403,9 @@
                 <p>Препарат ІНФЛЮЦИД містить шість активних компонентів, найбільш прийнятних для лікування гострої респіраторної вірусної інфекції. ІНФЛЮЦИД зупиняє типові ознаки гострої інфекції дихальних шляхів, такі як гарячка, головний біль, болючість м’язів, а також риніт та фарингіт <sup>1</sup>. </p>
                 <p>ІНФЛЮЦИД посилює природний захист організму і сприяє швидкому видужанню і відновленню сил після перенесеного захворювання, у такий спосіб зменшує ознаки виснаження (астенічний синдром) або запобігає їм. Застосування препарату при перших проявах захворювання або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання<sup>1</sup>.</p>
                 <p>Бережіть себе та своїх близьких. Бажаємо міцного здоров’я та стійкого імунітету.</p>
-                <ul>
-                	<li><a href='./instruction.pdf'>Інструкція для медичного застосування до препарату Інфлюцид</a></li>
-                	<li><a href='http://covid19.com.ua/#rec166168889' >http://covid19.com.ua/#rec166168889</a></li>
-                	<li><a href='https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini' >https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini</a></li>
-                </ul>
+                	<p><sup>1</sup><a href='./instruction.pdf' >Інструкція для медичного застосування до препарату Інфлюцид</a></p>
+                  <p><sup>2</sup><a href='http://covid19.com.ua/#rec166168889' >http://covid19.com.ua/#rec166168889</a></p>
+                  <p><sup>3</sup><a href='https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini' >https://www.phc.org.ua/kontrol-zakhvoryuvan/inshi-infekciyni-zakhvoryuvannya/monitoring-i-ocinka/zakhvoryuvanist-na-grip-ta-grvi-v-ukraini</a></p>
                   
               </div>
             </div>
