--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -85,7 +85,7 @@
 <a name="block1"></a>
 
 <div class="block block-3">
-    <div class="block-3__container">
+    <div class="block-3__container block-1_sport">
         <div class="container">
             <div class="container__img container__img-sport"></div>
             <div class="container__title"><p>При судомах</p></div>
@@ -135,6 +135,7 @@
             </ul>
         </div>
     </div>
+    <p>Знайди сфою форму Біолектри:</p>
 </div>
 <a name="block4"></a>
 
@@ -190,7 +191,6 @@
 
 
 <div class="block block-5">
-    <p>Знайди сфою форму Біолектри:</p>
     <div class="block-5__container">
         <div class="plate">
             <div class="plate__img"></div>
