--- a/bioelektra/index-str.html
+++ b/bioelektra/index-str.html
@@ -85,7 +85,7 @@
 <a name="block1"></a>
 
 <div class="block block-3">
-    <div class="block-3__container">
+    <div class="block-3__container block-1_str">
         <div class="container">
             <div class="container__img container__img-str"></div>
             <div class="container__title"><p>Стрес</p></div>
