--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<a href="influcid-RU/index.html">influcid-RU</a>
 			<a href="influcid-BY/index.html">influcid-BY</a>
 			<a href="influcid-AZ/index.html">influcid-AZ</a>
-			<a href="influcid-KZ/index.html">influcid-AZ</a>
+			<a href="influcid-KZ/index.html">influcid-KZ</a>
 		</section>
 	</main>
 
