--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -60,6 +60,9 @@
 
           </div>
         </div>
+
+      <a class="fixed-link" href="">заказать доставку</a>
+
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
