--- a/influcid/index.html
+++ b/influcid/index.html
@@ -57,8 +57,13 @@
         </div>
 
 
+
+
           </div>
         </div>
+
+      <a class="fixed-link" href="">замовити доставку</a>
+
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
