--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -153,14 +153,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>NECƏ QƏBUL ETMƏLİ</h2>
-        <div class="change-box">
-          <div>
-            <p class=" p-btn1 active-btn">Таблетки</p>
-          </div>
-          <div>
-            <p class="p-btn2">Краплі</p>
-          </div>
-        </div>
+<!--        <div class="change-box">-->
+<!--          <div>-->
+<!--            <p class=" p-btn1 active-btn">Таблетки</p>-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <p class="p-btn2">Краплі</p>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>Kəskin xəstəlik dövründə</h3>
@@ -428,7 +428,6 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
 
             <div class="block-7">
               <h2>HARADAN ALMALI</h2>
-              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Sübutedici baza</h3>
@@ -462,7 +461,8 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ’Я</p>
+            <p>Samolečenje može biti opasno po Vaše zdravlje.
+              Prije uporabe pažljivo pročitajte Uputu o lijeku. Za obavijesti o indikacijama, mjerama opreza i nuspojavama upitajte svog liječnika ili farmaceuta.</p>
           </div>
 
 
