--- a/influcid-KZ/index.html
+++ b/influcid-KZ/index.html
@@ -153,14 +153,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>ҚАЛАЙ ҚОЛДАНУҒА БОЛАДЫ</h2>
-        <div class="change-box">
-          <div>
-            <p class=" p-btn1 active-btn">Таблетки</p>
-          </div>
-          <div>
-            <p class="p-btn2">Краплі</p>
-          </div>
-        </div>
+<!--        <div class="change-box">-->
+<!--          <div>-->
+<!--            <p class=" p-btn1 active-btn">Таблетки</p>-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <p class="p-btn2">Краплі</p>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>Жедел ауру кезінде</h3>
@@ -427,7 +427,6 @@
 
             <div class="block-7">
               <h2>Қайдан сатып алуға болады</h2>
-              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Дәлелдемелер базасы</h3>
@@ -452,8 +451,8 @@
 <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
 <!--            </ol>-->
             <p>
-            Инфлюцид таб. Р.С. № _________.<br>
-            Эксклюзивті  дистрибьютор: ____________________________.
+              Дәрілік препарат жарнамасы. Қолданар алдында нұсқаулықпен мұқият танысыңыз, дәрігермен кеңесіңіз. <br>
+              Балалардың қолы жетпейтін жерде сақтаңыз.
               <br>
             </p>
             <div class="logos-container">
